--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Sander Hellesø",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "create-react-app": "^1.5.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "ffmpeg": "0.0.4",
@@ -18,6 +20,8 @@
     "google-auth-library": "^1.6.1",
     "googleapis": "^32.0.0",
     "nodemon": "^1.17.5",
+    "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
     "shelljs": "^0.8.2",
     "youtube-dl": "^1.12.2",
     "youtube-mp3": "^0.1.2",
