--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,17 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/*": {
+      "target": "http://localhost:5000"
+    }
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
