--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-wavesurfer": "^0.8.6",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "wavesurfer": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
