--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "google-auth-library": "^1.6.1",
     "googleapis": "^32.0.0",
+    "imagemin": "^5.3.1",
     "nodemon": "^1.17.5",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
