--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "express": "^4.16.3",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
+    "gm": "^1.23.1",
     "google-auth-library": "^1.6.1",
     "googleapis": "^32.0.0",
+    "image-min": "^0.3.2",
     "imagemin": "^5.3.1",
+    "imagemin-jpegtran": "^5.0.2",
     "nodemon": "^1.17.5",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
