--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     }
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "axios": "^0.18.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.4.1",
